--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
 <body>
 
-    <img src="images/bg-pattern-top-mobile.svg" id="top-mb">
-    <img src="images/bg-pattern-bottom-mobile.svg" id="bottom-mb">
+    <img src="images/bg-pattern-top-mobile.svg" id="top-mb" alt=".">
+    <img src="images/bg-pattern-bottom-mobile.svg" id="bottom-mb" alt=".">
 
-    <img src="images/bg-pattern-top-desktop.svg" id="top-dt">
-    <img src="images/bg-pattern-bottom-desktop.svg" id="bottom-dt">
+    <img src="images/bg-pattern-top-desktop.svg" id="top-dt" alt=".">
+    <img src="images/bg-pattern-bottom-desktop.svg" id="bottom-dt" alt=".">
 
     <!-- General Container -->
     <div class="container">
