--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <img src="images/bg-pattern-bottom-desktop.svg" id="bottom-dt" alt=".">
 
     <!-- General Container -->
-    <div class="container">
+    <main class="container">
 
-        <div class="headline-rating">
+        <section class="headline-rating">
 
             <!-- Headline Container -->
             <div class="headline">
@@ -150,11 +150,11 @@
             </div>
 
 
-        </div>
+        </section>
 
 
         <!-- Review Cards Container -->
-        <div class="card-container">
+        <section class="card-container">
 
             <!-- Card 1 -->
             <div class="card margin-right">
@@ -217,7 +217,7 @@
                 </p>
             </div>
 
-        </div>
+        </section>
 
 </body>
 
